# CIToolkit

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
citoolkit/costfunctions/: accumulated_cost_dfa.py  cost_func.py  cost_z3_formula.py  static_cost_dfa.py
citoolkit/improvisers/: alqci.py  approx_labelled_quantitative_ci.py  ci.py  classic_ci.py  improviser.py  labelled_ci.py  labelled_quantitative_ci.py  lci.py  lqci.py  qci.py  quantitative_ci.py
citoolkit/labellingfunctions/: labelling_dfa.py  labelling_func.py  labelling_z3_formula.py
citoolkit/specifications/: bool_formula.py  dfa.py  spec.py  z3_formula.py
citoolkit/util/: logging.py
docs/: Makefile  api.rst
docs/source/: citoolkit.costfunctions.rst  citoolkit.improvisers.rst  citoolkit.labellingfunctions.rst  citoolkit.rst  citoolkit.specifications.rst  conf.py  index.rst  installation.rst  modules.rst  quickstart.rst  requirements.txt  testing.rst  usage.rst
examples/: approxmc  approxmc4  creative_planning_large.py  debug.py  gridworld.py  output.json  quickstart.py  robotic_planning_approximate.py  robotic_planning_exact.py  test.pickle  test_1.pickle  unigen
experiments/: approxmc  creative_planning_mini.py  experiment_figures.py  experiment_manager.py  gridworld.py  hard_constraint.pickle  input.json  mod_approxmc.tar.xz  mod_unigen.tar.xz  multi_uuv.py  plot_3d_planning.py  robotic_planning_approximate.py  robotic_planning_exact.py  unigen
experiments/approx_data/: class_sizes.pickle  var_maps.pickle
experiments/approx_data/formulas/: RP_Label_0_Cost_0.cnf  RP_Label_0_Cost_1.cnf  RP_Label_0_Cost_11.cnf  RP_Label_0_Cost_12.cnf  RP_Label_0_Cost_2.cnf  RP_Label_0_Cost_3.cnf  RP_Label_0_Cost_4.cnf  RP_Label_0_Cost_5.cnf  RP_Label_0_Cost_7.cnf  RP_Label_0_Cost_8.cnf  RP_Label_0_Cost_9.cnf  RP_Label_1_Cost_0.cnf  RP_Label_1_Cost_1.cnf  RP_Label_1_Cost_10.cnf  RP_Label_1_Cost_11.cnf  RP_Label_1_Cost_12.cnf  RP_Label_1_Cost_2.cnf  RP_Label_1_Cost_3.cnf  RP_Label_1_Cost_4.cnf  RP_Label_1_Cost_5.cnf  RP_Label_1_Cost_6.cnf  RP_Label_1_Cost_7.cnf  RP_Label_1_Cost_8.cnf  RP_Label_1_Cost_9.cnf  RP_Label_2_Cost_0.cnf  (+11 more)
experiments/exact_data/: hard_constraint.pickle  label_function.pickle
tests/: test_accumulated_cost_dfa.py  test_alqci.py  test_approx_lqci.py  test_ci.py  test_classic_ci.py  test_dfa.py  test_labelled_ci.py  test_labelled_quantitative_ci.py  test_labelling_dfa.py  test_lci.py  test_lqci.py  test_qci.py  test_quantitative_ci.py  test_spec.py  test_static_cost_dfa.py  test_utils.py  test_z3_formula.py
(+41 files in other folders)
