[tool.poetry]
name = "citoolkit"
version = "0.1.0"
description = "A library containing tools to create and solve instances of the Control Improvisation problem and its extensions."
authors = ["Eric Vin <evin@ucsc.edu>", "Daniel J. Fremont <dfremont@ucsc.edu>"]
maintainers = ["Eric Vin <evin@ucsc.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = {version = "^6.2.4", optional = true}
pytest-randomly = {version = "^3.8.0", optional = true}
sphinx = {version = "^4.1.1", optional = true}
sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
sphinx-rtd-theme = {version = "^0.5.2", optional = true}
cvxpy = "^1.1.14"
pytest-repeat = "^0.9.1"
matplotlib = "^3.4.3"
pyeda = "^0.28.0"
z3-solver = "^4.8.12"
boolexpr = "^2.4"

[tool.poetry.extras]
dev = [
    "pytest",
    "pytest-randomly",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow",
]

filterwarnings = [
    "ignore::DeprecationWarning",
]