[tool.poetry]
name = "citoolkit"
version = "0.1.0"
description = "A library containing tools to create and solve instances of the Control Improvisation problem and its extensions."
authors = ["Eric Vin <evin@ucsc.edu>", "Daniel J. Fremont <dfremont@ucsc.edu>"]
maintainers = ["Eric Vin <evin@ucsc.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"

scipy = "^1.8.1"
matplotlib = "^3.4.3"
multiprocess = "^0.70.12"
cvxpy = "^1.2.1"
z3-solver = "^4.10.1"

pytest = {version = "^6.2.4", optional = true}
pytest-randomly = {version = "^3.8.0", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
hypothesis = {version = "^6.53.0", optional = true}
sphinx = {version = "^4.1.1", optional = true}
sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
sphinx-rtd-theme = {version = "^0.5.2", optional = true}
pyinstrument = {version = "^4.2.0", optional = true}
black = {version = "22.6.0", optional = true}


[tool.poetry.extras]
dev = [
    "pytest",
    "pytest-randomly",
    "pytest-cov",
    "hypothesis",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "pyinstrument",
    "black"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "advanced",
]
